fix padding on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1468,6 +1468,16 @@ section {
 }
 
 
+
+@media screen and (min-device-width: 360px) and (max-device-width: 667px) { 
+    .index-padding1 {
+        padding-top:100px;
+        padding-bottom:50px;
+    }
+    }
+
+
+
 @media screen and (min-device-width: 360px) and (max-device-width: 667px) { 
     .index-padding {
         padding-top:150px;
